cmake_minimum_required(VERSION 3.30)
project(labfinal)

set(CMAKE_CXX_STANDARD 20)

add_executable(labfinal main.cpp STRING71.cpp main71.cpp main72.cpp Manip72.cpp
        FloatToOctal72.cpp main6.cpp SequenceHandler6.h FormattedPrint6.h main5.cpp STRING5.cpp
        main3.cpp NumberProcessor3.cpp NumberProcessor3.h main2.cpp Matrix2.cpp
        main1.cpp STRING1.h STRING1.cpp
        STRING4.h
        STRING4.cpp
        STRING_INVERTED4.h
        STRING_INVERTED4.cpp
        main4.cpp
)
